--- a/home.html
+++ b/home.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
 
-    
+
+
+    </header>
+    <main>
+
+
+    </main>
+    <footer>
+
+        
+    </footer>
+
+
 </body>
 </html>
