--- a/home.html
+++ b/home.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <header>
-<h1>hello</h1>
+        <h1>hello</h1>
+            <nav>
+                <ul>
+                    <li><a href="">home</a></li>
+                    <li><a href="">art</a></li>
+                    <li><a href="">books</a></li>
+                    <li><a href="">mobs</a></li>
+
+
+
+                </ul>
+
+            </nav>
 
 
     </header>
