--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <header>
         <h1>hello</h1>
             <nav>
-                <ul>
+                <ul class="nav__links">
                     <li><a href="">home</a></li>
                     <li><a href="">art</a></li>
                     <li><a href="">books</a></li>
